Removing unnecessary classes. Adding Optional to signatures that may return null.